--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -22,6 +22,12 @@ h3 {
   }
   .main-content {
       margin: 5%;
+      h3 {
+          padding: 25px 0 25px 0;
+      }
+      p {
+          line-height: 1.5;
+      }
   }
 .learn-more-page {
     display: block;
@@ -47,6 +53,7 @@ h3 {
     width: 350px;
     margin: 0 auto;
     padding: 10px;
+    padding-bottom: 40px;
     h3 {
         padding-bottom: 25px;
     }
@@ -56,5 +63,9 @@ h3 {
         border-radius: 50%;
         margin-left: 115px;
         vertical-align: center;
+    }
+    i {
+        font-size: 24px;
+        color: black;
     }
 }
