--- a/assets/less/home-page.less
+++ b/assets/less/home-page.less
@@ -250,60 +250,3 @@ button.learn-more {
         }
     }
 }
-footer {
-    margin: 25px 0 25px 0;
-    width: 100%;
-    height: 450px;
-    border-radius: 6px;
-    @media @mobile {
-        margin: 0 auto;
-
-    }
-}
-.footerPanels {
-    margin: 0 auto;
-    width: 960px;
-    display: flex;
-    @media @mobile {
-        width: 500px;
-        flex-direction: column;
-    }
-    
-}
-.footer-testimonials {
-    width: 60%;
-    height: 100%;
-    display: flex;
-    @media @mobile {
-        width: 100%;
-        margin: 0 auto;
-        display: block;
-    }
-}
-.contact-info {
-    text-align: center;
-    margin: 35px;
-    padding-bottom: 25px;
-    width: 30%;
-    height: 100%;
-
-    h3 {
-        padding-bottom: 25px;
-    }
-    @media @mobile {
-       text-align: left;
-       margin: 15px;
-       width: 60%;
-    }
-}
-.contact-social {
-    
-    display: flex;
-    justify-content: space-evenly;
-    i {
-        padding: 10px;
-        margin-left: 10px;
-        color:#696969;
-        font-size: 36px;
-    }
-}
